# maxflow

./: .gitignore  CMakeLists.txt  README.md  graphExample.txt
src/: CMakeLists.txt  command_line_parser.h  dinic.h  edmonds_karp.h  graph.h  graph_reader.h  maxflow.cpp  push_relabel.h  solver.h  types.h
test/: CMakeLists.txt  graph_reader_test.cpp  maxflow_test.cpp
test/testdata/invalid_files/: invalidDesignator.txt  invalidDestinationNodeNotExist.txt  invalidEdgeBeforeProblemLine.txt  invalidEdgeBeforeTwoNodeLines.txt  invalidIncorrectNodeLine.txt  invalidIncorrectProblemLine.txt  invalidMoreThanTwoNodeLines.txt  invalidNoProblemLine.txt  invalidNodeBeforeProblemLine.txt  invalidNotMax.txt  invalidParallelEdges.txt  invalidSinkTooHigh.txt  invalidSinkTooLow.txt  invalidSourceNodeNotExist.txt  invalidSourceTooHigh.txt  invalidSourceTooLow.txt  invalidTooFewEdges.txt  invalidTooManyEdges.txt  invalidTwoProblemLines.txt  invalidTwoSinkLines.txt  invalidTwoSourceLines.txt  invalidUnknownDesignator.txt
test/testdata/maxflowInstances/: maxflow109V2051E.txt  maxflow139V2951E.txt
test/testdata/valid_files/: antiparallel.txt  no_antiparallel.txt
